--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
